BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_RIA_Reason_Mapping__c.object
<CustomObject>
    <description>Data Mapping object for RIA values and Reason Code, Description fields</description>
    <fields>
        <fullName>HSvc_Action__c</fullName>
        <description>Action field as in case</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_Actual_Issue__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Activate service</fullName>
                </value>
                <value>
                    <fullName>Adjustments not applied</fullName>
                </value>
                <value>
                    <fullName>Apply adjustments</fullName>
                </value>
                <value>
                    <fullName>Bad Number</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
                <value>
                    <fullName>Call Back</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Considering</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>De-install Equipment</fullName>
                </value>
                <value>
                    <fullName>Dispatch Tech</fullName>
                </value>
                <value>
                    <fullName>Educated Customer</fullName>
                </value>
                <value>
                    <fullName>Escalate</fullName>
                </value>
                <value>
                    <fullName>Escalated to Hughes</fullName>
                </value>
                <value>
                    <fullName>Escalated to SIC</fullName>
                </value>
                <value>
                    <fullName>Escalated to Supervisor</fullName>
                </value>
                <value>
                    <fullName>Give Courtesy Token(s)</fullName>
                </value>
                <value>
                    <fullName>Inform customer</fullName>
                </value>
                <value>
                    <fullName>Inform management Customer Service Hughes</fullName>
                </value>
                <value>
                    <fullName>Inform management Field Service Hughes</fullName>
                </value>
                <value>
                    <fullName>Install - Escalate</fullName>
                </value>
                <value>
                    <fullName>Install - Updated</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>Located</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Not located</fullName>
                </value>
                <value>
                    <fullName>Not Updated</fullName>
                </value>
                <value>
                    <fullName>Prioritize dispatch tech</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Process Cancellation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Actual_Issue__c</fullName>
        <description>Actual Issue as in RIA</description>
        <label>Actual Issue</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_Customer_Request_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3rd party Device Issue</fullName>
                </value>
                <value>
                    <fullName>Account Issue</fullName>
                </value>
                <value>
                    <fullName>Account Name (Misspelling)</fullName>
                </value>
                <value>
                    <fullName>Account Ownership Change</fullName>
                </value>
                <value>
                    <fullName>Activate new service</fullName>
                </value>
                <value>
                    <fullName>Agent Callback</fullName>
                </value>
                <value>
                    <fullName>Amount Due</fullName>
                </value>
                <value>
                    <fullName>Application Issue</fullName>
                </value>
                <value>
                    <fullName>Application Issue - Customer</fullName>
                </value>
                <value>
                    <fullName>Application Issue - hughes</fullName>
                </value>
                <value>
                    <fullName>Authorized Contact</fullName>
                </value>
                <value>
                    <fullName>Automated Call - Activation</fullName>
                </value>
                <value>
                    <fullName>Available schedule</fullName>
                </value>
                <value>
                    <fullName>Bad Cables/Wiring</fullName>
                </value>
                <value>
                    <fullName>Bad Modem</fullName>
                </value>
                <value>
                    <fullName>Bad Radio</fullName>
                </value>
                <value>
                    <fullName>Bad Treatment - CSR</fullName>
                </value>
                <value>
                    <fullName>Bad Treatment - Technical</fullName>
                </value>
                <value>
                    <fullName>Bad website</fullName>
                </value>
                <value>
                    <fullName>Bad website/url</fullName>
                </value>
                <value>
                    <fullName>Bank Strike</fullName>
                </value>
                <value>
                    <fullName>Bill Date</fullName>
                </value>
                <value>
                    <fullName>Billing Address</fullName>
                </value>
                <value>
                    <fullName>Billing Issue</fullName>
                </value>
                <value>
                    <fullName>Bill Notification</fullName>
                </value>
                <value>
                    <fullName>Boleto to credit card</fullName>
                </value>
                <value>
                    <fullName>Boleto to debit</fullName>
                </value>
                <value>
                    <fullName>Bonus Zone</fullName>
                </value>
				<value>
                    <fullName>Response Time</fullName>
                </value>
				<value>
                    <fullName>Appeal/Escalation Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Customer_Request_Type__c</fullName>
        <description>Customer Request Type of RIA</description>
        <label>Customer Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition Information</fullName>
                </value>
                <value>
                    <fullName>Add/Upgrade Service</fullName>
                </value>
                <value>
                    <fullName>Billing Info</fullName>
                </value>
                <value>
                    <fullName>Bill Inquiry/Dispute</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
                <value>
                    <fullName>Call Recording</fullName>
                </value>
                <value>
                    <fullName>Cancel - Change of Address</fullName>
                </value>
                <value>
                    <fullName>Cancel - Competition</fullName>
                </value>
                <value>
                    <fullName>Cancel - Financial</fullName>
                </value>
                <value>
                    <fullName>Cancellation Information</fullName>
                </value>
                <value>
                    <fullName>Cancel Order</fullName>
                </value>
                <value>
                    <fullName>Cancel - Ownership Change</fullName>
                </value>
                <value>
                    <fullName>Cancel - Sales Practices</fullName>
                </value>
                <value>
                    <fullName>Cancel Service</fullName>
                </value>
                <value>
                    <fullName>Cancel - Technical</fullName>
                </value>
                <value>
                    <fullName>Cancel - Treatment</fullName>
                </value>
                <value>
                    <fullName>Cancel VSAT</fullName>
                </value>
                <value>
                    <fullName>Cannot Connect to Wi-Fi Booster</fullName>
                </value>
                <value>
                    <fullName>Cannot find Wi-Fi Network</fullName>
                </value>
                <value>
                    <fullName>Cannot Login</fullName>
                </value>
                <value>
                    <fullName>Cannot Receive Emails</fullName>
                </value>
                <value>
                    <fullName>Cannot Send Emails</fullName>
                </value>
                <value>
                    <fullName>Change Due Date - Temporary</fullName>
                </value>
                <value>
                    <fullName>Change Order</fullName>
                </value>
                <value>
                    <fullName>Change Payment Type</fullName>
                </value>
                <value>
                    <fullName>Change Service Plan</fullName>
                </value>
                <value>
                    <fullName>Client Request</fullName>
                </value>
                <value>
                    <fullName>Collect Payment</fullName>
                </value>
                <value>
                    <fullName>Contract / Policies / Terms of Use</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Effective_Date__c</fullName>
        <description>Effective date from which this record is valid</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_Expiry_Date__c</fullName>
        <description>determines Validity of the record</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_IsActive__c</fullName>
        <formula>IF(HSvc_Effective_Date__c &lt;= TODAY() &amp;&amp; TODAY() &lt;= HSvc_Expiry_Date__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Reason_Code__c</fullName>
        <description>Contains Reason code value</description>
        <label>Reason Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Reason_Description_Formula__c</fullName>
        <description>Description based on language</description>
        <formula>CASE($Label.Current_Language_Key,&apos;es_CO&apos;, IF(ISBLANK( HSvc_Reason_Description_Spanish__c ), HSvc_Reason_Description__c ,HSvc_Reason_Description_Spanish__c) ,&apos;es_PA&apos;, IF(ISBLANK( Hsvc_ReasonDescriptionPanama__c ), HSvc_Reason_Description__c ,Hsvc_ReasonDescriptionPanama__c) , &apos;es_PE&apos;, IF(ISBLANK( Hsvc_ReasonDescriptionPeru__c ), HSvc_Reason_Description__c ,Hsvc_ReasonDescriptionPeru__c) , &apos;es_CL&apos;, IF(ISBLANK(Hsvc_ReasonDescriptionChile__c), HSvc_Reason_Description__c ,Hsvc_ReasonDescriptionChile__c) , &apos;es_EC&apos;, IF(ISBLANK( Hsvc_ReasonDescriptionEcuador__c), HSvc_Reason_Description__c ,Hsvc_ReasonDescriptionEcuador__c) , &apos;es_AR&apos;, IF(ISBLANK( Hsvc_ReasonDescriptionArgentina__c), HSvc_Reason_Description__c ,Hsvc_ReasonDescriptionArgentina__c),HSvc_Reason_Description__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Reason_Description_Spanish__c</fullName>
        <description>Contains Reason Description(Spanish) corresponding to RIA values</description>
        <label>Reason Description (Colombia)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Reason_Description__c</fullName>
        <description>Contains Reason Description corresponding to RIA values</description>
        <label>Reason Description (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_ApplicableCountry__c</fullName>
        <label>Applicable Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
	<fields>
        <fullName>Hsvc_ReasonDescriptionArgentina__c</fullName>
        <label>Reason Description (Argentina)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_ReasonDescriptionChile__c</fullName>
        <description>Contains Reason Description for Chile country corresponding to RIA values</description>
        <label>Reason Description (Chile)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_ReasonDescriptionEcuador__c</fullName>
        <description>Contains Reason Description for Ecuador country corresponding to RIA values</description>
        <label>Reason Description (Ecuador)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_ReasonDescriptionPanama__c</fullName>
        <label>Reason Description (Panama)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_ReasonDescriptionPeru__c</fullName>
        <description>Contains Reason Description for Peru country corresponding to RIA values</description>
        <label>Reason Description (Peru)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RIA Reason Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HSvc_Customer_Request_Type__c</columns>
        <columns>HSvc_Actual_Issue__c</columns>
        <columns>HSvc_Action__c</columns>
        <columns>HSvc_Reason_Code__c</columns>
        <columns>HSvc_Reason_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>RIA Reason Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RIA Reason Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ExpiryDateCannotBeSetUpInPast</fullName>
        <active>true</active>
        <description>Expiry Date cannot be set in past and cannot be less than the effective date</description>
        <errorConditionFormula>OR(HSvc_Expiry_Date__c&lt; TODAY(),HSvc_Expiry_Date__c&lt;HSvc_Effective_Date__c)</errorConditionFormula>
        <errorDisplayField>HSvc_Expiry_Date__c</errorDisplayField>
        <errorMessage>Expiry Date cannot be set in past and cannot be less than the effective date</errorMessage>
    </validationRules>
</CustomObject>